--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.uwetrottmann.trakt5</groupId>
+    <groupId>takutility.trakt5</groupId>
     <artifactId>trakt-java</artifactId>
     <packaging>jar</packaging>
-    <version>6.16.1-SNAPSHOT</version>
+    <version>6.16.0.1-SNAPSHOT</version>
 
     <name>trakt-java</name>
     <description>trakt-java is a retrofit2 based wrapper around the Trakt API v2.</description>
@@ -133,8 +133,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
             <!-- https://github.com/apache/maven-release/releases -->
@@ -203,7 +203,7 @@
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <version>3.7.0</version>
                         <configuration>
-                            <source>8</source>
+                            <source>11</source>
                         </configuration>
                         <executions>
                             <execution>
